portainer/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: portainer
spec:
  rules:
    - host: portainer.771.blue
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
